// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingCard matches snapshot 1`] = `
<a
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageContainer"
  />
  <div
    class="info"
  >
    <div
      class="price"
      title="55"
    >
      <span>
        ListingCard.price
      </span>
    </div>
    <div
      class="mainInfo"
    >
      <div
        class="title"
      >
        listing1 title
      </div>
      <div
        class="authorInfo"
      >
        <div
          class="author"
        >
          <span>
            ListingCard.author
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot with all badges and no author 1`] = `
<a
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageContainer"
  >
    <div
      class="trustBadges"
    >
      <span
        class="badge"
      >
        GOTS
      </span>
      <span
        class="badge"
      >
        Non-toxic
      </span>
    </div>
    <div
      class="conversionBadge"
    >
      <span>
        ListingCard.bestseller
      </span>
    </div>
  </div>
  <div
    class="info"
  >
    <div
      class="price"
      title="55"
    >
      <span>
        ListingCard.price
      </span>
    </div>
    <div
      class="mainInfo"
    >
      <div
        class="title"
      >
        listing1 title
      </div>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot with conversion badge (bestseller) 1`] = `
<a
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageContainer"
  >
    <div
      class="conversionBadge"
    >
      <span>
        ListingCard.bestseller
      </span>
    </div>
  </div>
  <div
    class="info"
  >
    <div
      class="price"
      title="55"
    >
      <span>
        ListingCard.price
      </span>
    </div>
    <div
      class="mainInfo"
    >
      <div
        class="title"
      >
        listing1 title
      </div>
      <div
        class="authorInfo"
      >
        <div
          class="brandName"
        >
          <span>
            ListingCard.brand
          </span>
        </div>
        <div
          class="author"
        >
          <span>
            ListingCard.author
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot with conversion badge (low stock) 1`] = `
<a
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageContainer"
  >
    <div
      class="conversionBadge urgencyBadge"
    >
      <span>
        ListingCard.lowStock
      </span>
    </div>
  </div>
  <div
    class="info"
  >
    <div
      class="price"
      title="55"
    >
      <span>
        ListingCard.price
      </span>
    </div>
    <div
      class="mainInfo"
    >
      <div
        class="title"
      >
        listing1 title
      </div>
      <div
        class="authorInfo"
      >
        <div
          class="brandName"
        >
          <span>
            ListingCard.brand
          </span>
        </div>
        <div
          class="author"
        >
          <span>
            ListingCard.author
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot with trust badges 1`] = `
<a
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageContainer"
  >
    <div
      class="trustBadges"
    >
      <span
        class="badge"
      >
        GOTS
      </span>
      <span
        class="badge"
      >
        BPA Free
      </span>
    </div>
  </div>
  <div
    class="info"
  >
    <div
      class="price"
      title="55"
    >
      <span>
        ListingCard.price
      </span>
    </div>
    <div
      class="mainInfo"
    >
      <div
        class="title"
      >
        listing1 title
      </div>
      <div
        class="authorInfo"
      >
        <div
          class="brandName"
        >
          <span>
            ListingCard.brand
          </span>
        </div>
        <div
          class="author"
        >
          <span>
            ListingCard.author
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot without author info 1`] = `
<a
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageContainer"
  />
  <div
    class="info"
  >
    <div
      class="price"
      title="55"
    >
      <span>
        ListingCard.price
      </span>
    </div>
    <div
      class="mainInfo"
    >
      <div
        class="title"
      >
        listing1 title
      </div>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot without price 1`] = `
<a
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageContainer"
  />
  <div
    class="info"
  >
    <div
      class="mainInfo"
    >
      <div
        class="title"
      >
        listing1 title
      </div>
      <div
        class="authorInfo"
      >
        <div
          class="author"
        >
          <span>
            ListingCard.author
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;
